Closed Bug 1711836 Opened 3 years ago Closed 3 years ago

[gcc 11] error: 'char* __builtin_strncpy(char*, const char*, long unsigned int)' specified bound 4097 equals destination size

Categories

(Core :: Security: Process Sandboxing, defect, P1)

defect

Tracking

()

RESOLVED FIXED
90 Branch
Tracking Status
firefox90 --- fixed

People

(Reporter: glandium, Assigned: glandium)

References

Details

Attachments

(1 file)

[task 2021-05-19T04:12:39.952Z] 04:12:39     INFO -  In file included from /builds/worker/fetches/sysroot/usr/include/string.h:640,
[task 2021-05-19T04:12:39.952Z] 04:12:39     INFO -                   from /builds/worker/workspace/obj-build/dist/system_wrappers/string.h:3,
[task 2021-05-19T04:12:39.956Z] 04:12:39     INFO -                   from /builds/worker/checkouts/gecko/ipc/chromium/src/base/basictypes.h:12,
[task 2021-05-19T04:12:39.956Z] 04:12:39     INFO -                   from /builds/worker/checkouts/gecko/ipc/chromium/src/base/platform_thread.h:14,
[task 2021-05-19T04:12:39.956Z] 04:12:39     INFO -                   from /builds/worker/checkouts/gecko/security/sandbox/linux/broker/SandboxBroker.h:12,
[task 2021-05-19T04:12:39.956Z] 04:12:39     INFO -                   from /builds/worker/checkouts/gecko/security/sandbox/linux/broker/SandboxBroker.cpp:7,
[task 2021-05-19T04:12:39.956Z] 04:12:39     INFO -                   from Unified_cpp_linux_broker0.cpp:2:
[task 2021-05-19T04:12:39.956Z] 04:12:39     INFO -  In function 'char* strncpy(char*, const char*, size_t)',
[task 2021-05-19T04:12:39.956Z] 04:12:39     INFO -      inlined from 'virtual void mozilla::SandboxBroker::ThreadMain()' at /builds/worker/checkouts/gecko/security/sandbox/linux/broker/SandboxBroker.cpp:741:14:
[task 2021-05-19T04:12:39.956Z] 04:12:39    ERROR -  /builds/worker/fetches/sysroot/usr/include/x86_64-linux-gnu/bits/string3.h:120:34: error: 'char* __builtin_strncpy(char*, const char*, long unsigned int)' specified bound 4097 equals destination size [-Werror=stringop-truncation]
[task 2021-05-19T04:12:39.957Z] 04:12:39     INFO -    120 |   return __builtin___strncpy_chk (__dest, __src, __len, __bos (__dest));
[task 2021-05-19T04:12:39.957Z] 04:12:39     INFO -        |          ~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[task 2021-05-19T04:12:39.957Z] 04:12:39     INFO -  cc1plus: all warnings being treated as errors
Pushed by mh@glandium.org:
https://hg.mozilla.org/integration/autoland/rev/f45b115e0b80
Fix GCC warning about the use of strncpy in SandboxBroker::ThreadMain. r=jld
Severity: -- → S3
Priority: -- → P1
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 90 Branch
Blocks: 1714004
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: