Bug 1711836 - Fix GCC warning about the use of strncpy in SandboxBroker::ThreadMain. r=jld

Differential Revision: https://phabricator.services.mozilla.com/D115449